--- a/block-BNaacs/school/views/index.ejs
+++ b/block-BNaacs/school/views/index.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h2>WElcome to views in express</h2>
-    <h4><% = user.name %></h4>
-    <h4><% = user.age %></h4>
+    <!-- <h4><% = user.name %></h4>
+    <h4><% = user.age %></h4> -->
     
 </body>
 </html>
