--- a/block-BNaadi/user-diary-2/views/users.ejs
+++ b/block-BNaadi/user-diary-2/views/users.ejs
@@ -7,13 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Users List</h2>
-    <% = users.forEach(user => { %>
-        <h2 class="text"><% = user.name %></h2>
-        <h2 class="text"><% = user.email %></h2>
-        <p class="para"><% = user.age %></p>
-        <p class="para"><% = user.bio %></p>
-   <% = }) %>
+    <%  users.forEach((user) => { %>
+        <h2><% = user.name %></h2>
+        <h2><% = user.email %></h2>
+        <p><% = user.age %></p>
+        <p><% = user.bio %></p>
+   <%  }) %>
     
 </body>
 </html>
